data/derived/comb/progs/unify/prog8056.ml.out
Characters 59-60:
  let fixpoint (f,b) = wwhile(if f = true then b else wwhile(f b,b), b);;
                                                             ^
Error: This expression has type bool
       This is not a function; it cannot be applied.
